[build-system]
requires = ["setuptools>=61.0"]
packages = ["gosafeopt"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.10.0,<3.12.0"    #Because of pytorch

[project]
name = "gosafeopt"
version = "0.1.0"
description = "Safe Bayesian Optimisation"
dependencies = [
  "torch==2.1.*",
  "numpy==1.26.*",
  "typer==0.9.*",
  "rich==13.7.*",
  "gpytorch==1.11.*",
  "botorch==0.9.*",
  "gymnasium==0.29.*",
  "wandb==0.16.*",
]
[project.optional-dependencies]
development = ["ruff-lsp", "hatch"]
examples = [
  "seaborn==0.13",
  "gymnasium[classic-control]",
  "moviepy==1.0",
  "plotly==5.18",
]

[tool.ruff]
line-length = 120

select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "Q",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "ANN",
  "S",
  "A",
  "C4",
  "T10",
  "G",
  "PIE",
  "Q",
  "RSE",
  "SLF",
  "SIM",
  "TID",
  "ARG",
  "ERA",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
]
exclude = ["D103"]

ignore = [
  "E501",
  "ANN101",
  "ANN201",
  "ANN204",
  "D100",
  "D103",
  "D104",
  "D202",
  "D102",
  "D101",
  "D107",
  "TRY002",
  "TRY003",
]

unfixable = ["B"]
