[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gosafeopt"
version = "0.1.0"
description = "Bayesion Optimization library focused on contextual GoSafeOpt"
authors = ["Daniel Widmer <widmdani@ethz.ch>"]
packages = [{include = "gosafeopt", from = "src"}]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, < 3.12" #torch not available for 3.12 as of now
numpy = "^1.26.2"
torch = "^2.1.1"
typer = "^0.9.0"
rich = "^13.7.0"
gpytorch = "^1.11"
botorch = "^0.9.4"
gymnasium = "^0.29.1"
wandb = "^0.16.1"

[tool.poetry.group.examples]
optional = true
[tool.poetry.group.examples.dependencies]
seaborn = "^0.13.0"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
moviepy = "^1.0.3"
plotly = "^5.18.0"
ruff-lsp = "^0.0.45"
pandas = "^2.1.3"

[tool.poetry.group.develop]
optional = true
[tool.poetry.group.develop.dependencies]
ruff-lsp = "^0.0.45"
pyright = "^1.1.339"
ruff = "^0.1.7"

[tool.ruff]
line-length = 120

select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "Q",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "ANN",
  "S",
  "A",
  "C4",
  "T10",
  "G",
  "PIE",
  "Q",
  "RSE",
  "SLF",
  "SIM",
  "TID",
  "ARG",
  "ERA",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
]
exclude = ["D103"]

ignore = [
  "E501",
  "ANN101",
  "ANN201",
  "ANN204",
  "D100",
  "D103",
  "D104",
  "D202",
  "D102",
  "D101",
  "D107",
  "TRY002",
  "TRY003",
]

unfixable = ["B"]

